updte_motoguadanas_and_footer

--- a/cosechadora/index.html
+++ b/cosechadora/index.html
@@ -1831,11 +1831,11 @@
         </div>
     </div>
 </div>    </section>
-    <footer id="footer">
+<footer id="footer">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy;  2015 Servicio Técnico STIHL. Diseñado por <a target="_blank" href="http://hedsolutions.net">HED Solutions</a>
+                    &copy;  2017 Servicio Técnico STIHL. Diseñado por <a target="_blank" href="http://hedsolutions.net">HED Solutions</a>
                 </div>
                 <div class="col-sm-6">
                     <ul class="social-icons">
@@ -1846,19 +1846,19 @@
         </div>    </footer>
     <!--/#footer-->
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-    <script type="text/javascript" src="http://serviciotecnicostihl.com/themes/jtherczeg-multi/assets/js/jquery.js"></script>
-    <script type="text/javascript" src="http://serviciotecnicostihl.com/themes/jtherczeg-multi/assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="http://serviciotecnicostihl.com/themes/jtherczeg-multi/assets/js/owl.carousel.min.js"></script>
-    <script type="text/javascript" src="http://serviciotecnicostihl.com/themes/jtherczeg-multi/assets/js/mousescroll.js"></script>
-    <script type="text/javascript" src="http://serviciotecnicostihl.com/themes/jtherczeg-multi/assets/js/smoothscroll.js"></script>
-    <script type="text/javascript" src="http://serviciotecnicostihl.com/themes/jtherczeg-multi/assets/js/jquery.prettyPhoto.js"></script>
-    <script type="text/javascript" src="http://serviciotecnicostihl.com/themes/jtherczeg-multi/assets/js/jquery.isotope.min.js"></script>
-    <script type="text/javascript" src="http://serviciotecnicostihl.com/themes/jtherczeg-multi/assets/js/jquery.inview.min.js"></script>
-    <script type="text/javascript" src="http://serviciotecnicostihl.com/themes/jtherczeg-multi/assets/js/wow.min.js"></script>
-    <script type="text/javascript" src="http://serviciotecnicostihl.com/themes/jtherczeg-multi/assets/js/main.js"></script>
+    <script type="text/javascript" src="../themes/jtherczeg-multi/assets/js/jquery.js"></script>
+    <script type="text/javascript" src="../themes/jtherczeg-multi/assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../themes/jtherczeg-multi/assets/js/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="../themes/jtherczeg-multi/assets/js/mousescroll.js"></script>
+    <script type="text/javascript" src="../themes/jtherczeg-multi/assets/js/smoothscroll.js"></script>
+    <script type="text/javascript" src="../themes/jtherczeg-multi/assets/js/jquery.prettyPhoto.js"></script>
+    <script type="text/javascript" src="../themes/jtherczeg-multi/assets/js/jquery.isotope.min.js"></script>
+    <script type="text/javascript" src="../themes/jtherczeg-multi/assets/js/jquery.inview.min.js"></script>
+    <script type="text/javascript" src="../themes/jtherczeg-multi/assets/js/wow.min.js"></script>
+    <script type="text/javascript" src="../themes/jtherczeg-multi/assets/js/main.js"></script>
     <script src="/modules/system/assets/js/framework.js"></script>
 <script src="/modules/system/assets/js/framework.extras.js"></script>
-<link href="/modules/system/assets/css/framework.extras.css" rel="stylesheet">
+<link href="/modules/system/assets/css/framework.extras.css" >
  </body>
 
 </html>
