--- a/fumigadoras/index.html
+++ b/fumigadoras/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicio Técnico STIHL</title>
     <!-- core CSS -->
-    <link href="../combine/07e325328db37fbbe7d1bd801fba1020-1443804717.css" rel="stylesheet">
+    <link href="../combine/styles.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="assets/js/html5shiv.js"></script>
     <script src="assets/js/respond.min.js"></script>
@@ -147,7 +147,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand text-center" href="#home"><img src="http://serviciotecnicostihl.com/themes/jtherczeg-multi/assets/images/logo.png" alt="logo"></a>
+                    <a class="navbar-brand text-center" href="#home"><img src="../themes/jtherczeg-multi/assets/images/logo.png" alt="logo"></a>
                 </div>
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
