--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="description" content="Servicio Técnico STIHL Santo Domingo">
-    <meta name="keywords" content="stihl, motosierras,motoguadañas, stihl-ecuador, taladros, stihlsantodomingo,podadoras,guadañas">
+    <meta name="keywords" content="Stihl, motosierras, motoguadañas, Stihl Ecuador, taladros, stihlsantodomingo, podadoras, moguadañas">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicio Técnico STIHL</title>
@@ -343,32 +343,8 @@
                         </div>
                     </div>
                 </div>
-                <!--/.portfolio-item-->
-            <!--/.portfolio-item-->
-                <div class="portfolio-item col-md-4 col-xs-12 corporate dome">
-                    <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="themes/jtherczeg-multi/assets/images/products/10.jpg" alt="">
-                        <div class="portfolio-info">
-                            <h3>Hidrolavadoras</h3>Limpieza eficaz y rapida
-                            <a class="preview" href="hidrolavadoras"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <!--portfolio-item-->
-                <div class="portfolio-item col-md-4 col-xs-12 corporate dome">
-                    <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="themes/jtherczeg-multi/assets/images/products/11.jpg" alt="">
-                        <div class="portfolio-info">
-                            <h3>Sierra Pegable</h3>
-                            <a class="preview" href="/hidrolavadoras"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-                 <!--portfolio-item-->
-
- <!--/. end portfolio-item-->
-
             </div>
+            <!--/. end portfolio-item-->
             <br>
             <div class="row">
                 <div class="col-md-6 col-xs-12"></div>
@@ -523,11 +499,11 @@
                 <div class="col-sm-6 wow fadeInLeft">
                     <h3 class="column-title">Video</h3>
                     <!-- 16:9 aspect ratio -->
-                    <div class="embed-responsive embed-responsive-16by9"><!--
+                    <div class="embed-responsive embed-responsive-16by9">
                             <iframe src="https://player.vimeo.com/video/90993594" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/90993594">Stihl Promo V1.2</a> from <a href="https://vimeo.com/user18987128">The Canadian Tradition</a> on <a href="https://vimeo.com">Vimeo</a>.</p>-->       
-                                       </div>
-                                       </div>
+                            <p><a href="https://vimeo.com/90993594">Stihl Promo V1.2</a> from <a href="https://vimeo.com/user18987128">The Canadian Tradition</a> on <a href="https://vimeo.com">Vimeo</a>.</p>      
+                    </div>
+                </div>
                 <div class="col-sm-6 wow fadeInRight">
                     <h3 class="column-title">Misión</h3>
                     <p>Somos una empresa dedicada a la comercialización de maquinarias y repuestos originales Stihl, brindando un servicio técnico garantizado, con la utilización de herramientas especiales y estrictos controles de calidad, logrando así la lealtad y satisfacción de nuestros clientes, buscando consolidarnos en el mercado nacional. Sin dejar de lado la preocupación por el bienestar social y el cuidado del medio ambiente.</p>
@@ -712,7 +688,7 @@
         </div>
     </section>
     <!--/#contact-->
-    <!-- Modal -->
+    <!-- Modal 
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -729,7 +705,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <footer id="footer">
         <div class="container">
             <div class="row">
@@ -739,9 +715,9 @@
                 <div class="col-sm-6">
                     <ul class="social-icons">
                         <li>
-                        <a href="#" target="_Blank" title="contador de visitas para web">Visitas</a><br><!--
+                        <a href="#" target="_Blank" title="contador de visitas para web">Visitas</a><br>
                         <script type="text/javascript" src="http://counter1.fcs.ovh/private/countertab.js?c=486b8699d27cf4be8107bb2b534b77af">
-                        </script>-->
+                        </script>
                         </li>
                     </ul>
                 </div>
