--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="description" content="Servicio Técnico STIHL Santo Domingo">
     <meta name="keywords" content="Stihl, motosierras, motoguadañas, Stihl Ecuador, taladros, stihlsantodomingo, podadoras, moguadañas">
     <meta name="author" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Servicio Técnico STIHL</title>
     <!-- core CSS -->
     <link href="combine/styles.css" rel="stylesheet">
-    <link href="combine/estilos.css" rel="stylesheet">
+    <link href="combine/styles2.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
     <script src="assets/js/html5shiv.js"></script>
@@ -48,9 +48,9 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand text-center" href="#home"><img src="themes/jtherczeg-multi/assets/images/logo.png" alt="logo"></a>
+                    <a class="navbar-brand" href="#home"><img src="themes/jtherczeg-multi/assets/images/logo.png" alt="logo"></a>
                 </div>
-                <div class="collapse navbar-collapse dat">
+                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="scroll active"><a href="#home">Inicio</a></li>
                         <li class="scroll"><a href="#portfolio">Productos</a></li>
@@ -59,6 +59,7 @@
                         <li class="scroll"><a href="#about">Sobre nosotros</a></li>
                         <li class="scroll"><a href="#blog">Noticias</a></li>
                         <li class="scroll"><a href="#juegos">Entretenimiento</a></li>
+                        <li><a target="_blank" href="http://stihl.efacturas.net/">Factura Electrónica</a></li>
                         <li class="scroll"><a href="https://www.facebook.com/stihlsantodomingo" target="_blank"><i class="fa fa-facebook-square fa-3x"></i> </a></li>
                     </ul>
                 </div>
