--- a/index.html
+++ b/index.html
@@ -241,20 +241,21 @@
             </div>
         </div>
     </section>
-    <section id="portfolio" class="porfolio">
+    <!--/#portfolio-->
+    <section id="portfolio" class="portfolio">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title text-center wow fadeInDown">Nuestros Productos</h2>
-                <p class="text-center wow fadeInDown">Rapidez y productividad para cualquier proyecto.</p>
+                    <h2 class="section-title text-center wow fadeInDown">Nuestros Productos</h2>
+                    <p class="text-center wow fadeInDown">Rapidez y productividad para cualquier proyecto.</p>
             </div>
             <div class="text-center">
-                <ul class="portfolio-filter">
-                    <li><a class="active" href="#" data-filter="*">Todos los productos</a></li>
-                    <li><a href="#" data-filter=".agro">Agropecuario</a></li>
-                    <li><a href="#" data-filter=".dome">Domestico</a></li>
-                    <li><a href="#" data-filter=".fore">Forestal</a></li>
-                </ul>
-                <!--/#portfolio-filter-->
+                    <ul class="portfolio-filter">
+                        <li><a class="active" href="#" data-filter="*">Todos los productos</a></li>
+                        <li><a href="#" data-filter=".agro">Agropecuario</a></li>
+                        <li><a href="#" data-filter=".dome">Domestico</a></li>
+                        <li><a href="#" data-filter=".fore">Forestal</a></li>
+                    </ul>
+                    <!--/#portfolio-filter-->
             </div>
             <div class="portfolio-items">
                 <div class="portfolio-item col-md-4 col-xs-12 agro fore dome">
@@ -262,119 +263,118 @@
                         <img class="img-responsive" src="assets/images/products/01.jpg" alt="">
                         <div class="portfolio-info">
                             <h3>Motoguadañas</h3> Sus sembrios libres de maleza
-                            <a class="preview" href="motoguadanas"><i class="fa fa-eye"></i></a>
+                                <a class="preview" href="motoguadanas"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
-                <!--/.portfolio-item-->
+                    <!--/.portfolio-item-->
                 <div class="portfolio-item col-md-4 col-xs-12 agro fore dome portfolio">
                     <div class="portfolio-item-inner">
                         <img class="img-responsive" src="assets/images/products/02.jpg" alt="">
                         <div class="portfolio-info">
                             <h3>Motosierras</h3> Compactas de gran potencia
-                            <a class="preview" href="motosierras"><i class="fa fa-eye"></i></a>
-                        </div>
+                                <a class="preview" href="motosierras"><i class="fa fa-eye"></i></a>
+                            </div>
                     </div>
                 </div>
-                <!--/.portfolio-item-->
+                    <!--/.portfolio-item-->
                 <div class="portfolio-item col-md-4 col-xs-12 agro fore">
                     <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="assets/images/products/03.jpg" alt="">
-                        <div class="portfolio-info">
-                            <h3>Motor Combi</h3> Todas las máquinas que necesitas
-                            <a class="preview" href="motorcombi"><i class="fa fa-eye"></i></a>
-                        </div>
+                            <img class="img-responsive" src="assets/images/products/03.jpg" alt="">
+                            <div class="portfolio-info">
+                                <h3>Motor Combi</h3> Todas las máquinas que necesitas
+                                <a class="preview" href="motorcombi"><i class="fa fa-eye"></i></a>
+                            </div>
                     </div>
                 </div>
-                <!--/.portfolio-item--
+                    <!--/.portfolio-item-->
                 <div class="portfolio-item col-md-4 col-xs-12 agro fore dome">
                     <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="themes/jtherczeg-multi/assets/images/products/04.jpg" alt="">
-                        <div class="portfolio-info">
-                            <h3>Sopladoras</h3> Adecuado para cualquier trabajo
-                            <a class="preview" href="sopladoras"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <!--/.portfolio-item-->
-                <div class="portfolio-item col-md-4 col-xs-12 agro portfolio">
-                    <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="assets/images/products/05.jpg" alt="">
-                        <div class="portfolio-info">
-                            <h3>Cosechadora de Café</h3> Aumenta varias veces el rendimiento
-                            <a class="preview" href="cosechadora"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <!--/.portfolio-item-->
-                <div class="portfolio-item col-md-4 col-xs-12 agro">
-                    <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="assets/images/products/06.png" alt="">
-                        <div class="portfolio-info">
-                            <h3>Taladro</h3> Para trabajos duros y exigentes
-                            <a class="preview" href="taladro"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <!--/.portfolio-item-->
-                <div class="portfolio-item col-md-4 col-xs-12 agro portfolio">
-                    <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="assets/images/products/07.jpg" alt="">
-                        <div class="portfolio-info">
-                            <h3>Podadora</h3> Llegan hasta lo más alto
-                            <a class="preview" href="podadora"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <!--/.portfolio-item-->
-                <div class="portfolio-item col-md-4 col-xs-12 corporate dome">
-                    <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="assets/images/products/08.jpg" alt="">
-                        <div class="portfolio-info">
-                            <h3>Cortasetos</h3> Listos para el mejor resultado
-                            <a class="preview" href="cortasetos"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <!--/.portfolio-item-->
-                <div class="portfolio-item col-md-4 col-xs-12 corporate dome">
-                    <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="assets/images/products/09.jpg" alt="">
-                        <div class="portfolio-info">
-                            <h3>Fumigadoras</h3> Sus sembrios libres de maleza
-                            <a class="preview" href="fumigadoras"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-item col-md-4 col-xs-12 corporate dome">
-                        <div class="portfolio-item-inner">
-                        <img class="img-responsive"" src="assets/images/products/10.jpg" alt="">
+                            <img class="img-responsive" src="assets/images/products/04.jpg" alt="">
                             <div class="portfolio-info">
-                                <h3>Hidrolavadoras</h3>Limpieza eficaz y rapida
-                                <a class="preview" href="/hidrolavadoras"><i class="fa fa-eye"></i></a>
+                                <h3>Sopladoras</h3> Adecuado para cualquier trabajo
+                                <a class="preview" href="sopladora"><i class="fa fa-eye"></i></a>
+                            </div>
+                    </div>
+                </div>
+                    <!--/.portfolio-item-->
+                    <div class="portfolio-item col-md-4 col-xs-12 agro portfolio">
+                        <div class="portfolio-item-inner">
+                            <img class="img-responsive" src="assets/images/products/05.jpg" alt="">
+                            <div class="portfolio-info">
+                                <h3>Cosechadora de Café</h3> Aumenta varias veces el rendimiento
+                                <a class="preview" href="cosechadora"><i class="fa fa-eye"></i></a>
                             </div>
                         </div>
+                    </div>
+                    <!--/.portfolio-item-->
+                    <div class="portfolio-item col-md-4 col-xs-12 agro">
+                        <div class="portfolio-item-inner">
+                            <img class="img-responsive" src="assets/images/products/06.png" alt="">
+                            <div class="portfolio-info">
+                                <h3>Taladro</h3> Para trabajos duros y exigentes
+                                <a class="preview" href="taladro"><i class="fa fa-eye"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->
+                    <div class="portfolio-item col-md-4 col-xs-12 agro portfolio">
+                        <div class="portfolio-item-inner">
+                            <img class="img-responsive" src="assets/images/products/07.jpg" alt="">
+                            <div class="portfolio-info">
+                                <h3>Podadora</h3> Llegan hasta lo más alto
+                                <a class="preview" href="podadora"><i class="fa fa-eye"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->
+                    <div class="portfolio-item col-md-4 col-xs-12 corporate dome">
+                        <div class="portfolio-item-inner">
+                            <img class="img-responsive" src="assets/images/products/08.jpg" alt="">
+                            <div class="portfolio-info">
+                                <h3>Cortasetos</h3> Listos para el mejor resultado
+                                <a class="preview" href="cortasetos"><i class="fa fa-eye"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->
+                    <div class="portfolio-item col-md-4 col-xs-12 corporate dome">
+                        <div class="portfolio-item-inner">
+                            <img class="img-responsive" src="assets/images/products/09.jpg" alt="">
+                            <div class="portfolio-info">
+                                <h3>Fumigadoras</h3> Sus sembrios libres de maleza
+                                <a class="preview" href="fumigadoras"><i class="fa fa-eye"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item col-md-4 col-xs-12 corporate dome">
+                            <div class="portfolio-item-inner">
+                            <img class="img-responsive"" src="assets/images/products/10.jpg" alt="">
+                                <div class="portfolio-info">
+                                    <h3>Hidrolavadoras</h3>Limpieza eficaz y rapida
+                                    <a class="preview" href="/hidrolavadoras"><i class="fa fa-eye"></i></a>
+                                </div>
+                            </div>
                     </div>
                     <!--portfolio-item-->
                     <div class="portfolio-item col-md-4 col-xs-12 corporate fore">
                         <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="assets/images/products/11.jpg" alt="">
-                            <div class="portfolio-info">
-                                <h3>Herramientas Manuales</h3>Accesorios Forestales
-                                <a class="preview" href="/herramientas"><i class="fa fa-eye"></i></a>
-                            </div>
+                            <img class="img-responsive" src="assets/images/products/11.jpg" alt="">
+                                <div class="portfolio-info">
+                                    <h3>Herramientas Manuales</h3>Accesorios Forestales
+                                    <a class="preview" href="herramientas"><i class="fa fa-eye"></i></a>
+                                </div>
                         </div>
                     </div>
-            <!--/. end portfolio-item-->
-            <br>
-            <div class="row">
-                <div class="col-md-6 col-xs-12"></div>
-                <div class="col-md-6 col-xs-12"><a class="btn btn-primary btn-lg btn-block" href="productos" role="button">Ver todos los productos</a></div>
-                <div class="col-md-6 col-xs-12"></div>
-            </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md-6 col-xs-12"></div>
+                    <div class="col-md-6 col-xs-12"><a class="btn btn-primary btn-lg btn-block" href="productos" role="button">Ver todos los productos</a></div>
+                    <div class="col-md-6 col-xs-12"></div>
+                </div>
         </div>
-        <!--/.container-->
+    <!--/.container-->
     </section>
     <!--/#portfolio-->
     <section id="features" class="dark-features features">
@@ -752,8 +752,8 @@
     </footer>
     <!--/#footer-->
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/feedify.js"></script>
     <script type="text/javascript" src="assets/js/jquery.js"></script>
     <script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="assets/js/mousescroll.js"></script>
